# harlequin-exasol

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
doc/: conf.py  index.rst  user_guide.rst
doc/_templates/: version.html
exasol/harlequin/: __init__.py  _adapter.py  _catalog.py  _completions.py  _options.py  version.py
test/integration/: integration_smoke_test.py
test/unit/: test_adapter.py  unit_smoke_test.py
